# jobctl

./: .env.example  .envrc  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_relational_schema.py
checklists/: plan_v1.0_checklist.md  plan_v2.0_checklist.md  plan_v3.0_checklist.md  plan_v4.0_checklist.md  plan_v5.0_checklist.md
docs/: async-primer.md  bugs.md  key-decisions.md  plan-v1.md  plan-v2.md  product-spec.md  progress.md  resume-ingest-behavior.md  ux-flow-assessment.md
examples/: toy-resume.yaml
memory/: bugs.md  key-decisions.md  progress.md
plans/: plan_v3.0.md  plan_v4.0.md  plan_v5.0.md
src/jobctl/: cli.py  config.py
src/jobctl/agent/: __init__.py  coverage.py  graph.py  router.py  runner.py  session.py  state.py
src/jobctl/app/: __init__.py  agent.py  apply.py  common.py  config.py  context.py  init.py  onboard.py  profile.py  rag.py  renderer.py  track.py  yap.py
tests/: __init__.py  conftest.py  test_agent_shell.py  test_apply_pipeline.py  test_background_jobs.py  test_cli_config.py  test_cover_letter_generation.py  test_curation_apply.py  test_e2e.py  test_evaluator.py  test_fetcher.py  test_github_ingestion.py  test_graph.py  test_llm_client.py  test_onboarding.py  test_renderer.py  test_resume_generation.py  test_resume_ingest_v2.py  test_resume_ingestion.py  test_tracker.py  test_vectors.py  test_yap.py
tests/agent/: test_apply_node_shim.py  test_chat_node.py  test_confirm_node.py  test_refinement_node.py  test_router.py  test_runner.py
tests/llm/: test_provider_conformance.py
tests/tui/: test_apply_input.py  test_apply_view.py  test_chat_streaming.py  test_file_picker.py  test_github_ingest_input.py  test_graph_tracker_polish.py  test_happy_path.py  test_job_lifecycle_widgets.py  test_mode_flow.py  test_palette_workflows.py  test_proactive_prompts.py  test_proposal_card.py  test_smoke.py
(+84 files in other folders)
